--- a/kaggle.ipynb
+++ b/kaggle.ipynb
@@ -13,9 +13,9 @@
     "import sklearn.linear_model as skl\n",
     "from pandas import Series,DataFrame\n",
     "\n",
-    "data_train = pd.read_csv('D:\\\\study（now）\\\\BDT\\\\5001 Foundations of Data Analytics\\\\kaggle\\\\msbd5001-fall2020\\\\train.csv', parse_dates=['date'])\n",
-    "data_test = pd.read_csv('D:\\\\study（now）\\\\BDT\\\\5001 Foundations of Data Analytics\\\\kaggle\\\\msbd5001-fall2020\\\\test.csv', parse_dates=['date'])\n",
-    "weather_data = pd.read_csv('D:\\\\study（now）\\\\BDT\\\\5001 Foundations of Data Analytics\\\\kaggle\\\\msbd5001-fall2020\\\\weather.csv')"
+    "data_train = pd.read_csv('train.csv', parse_dates=['date'])\n",
+    "data_test = pd.read_csv('test.csv', parse_dates=['date'])\n",
+    "weather_data = pd.read_csv('weather.csv')"
    ]
   },
   {
@@ -1178,7 +1178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r.to_csv(\"D:\\\\study（now）\\\\BDT\\\\5001 Foundations of Data Analytics\\\\kaggle\\\\msbd5001-fall2020\\\\result1.csv\", index=False)"
+    "r.to_csv(\"result.csv\", index=False)"
    ]
   },
   {
